<resources>
    <string name="app_name">WhatsappAndriodClient</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_username">User Name</string>
    <string name="prompt_nickname">Nick Name</string>
    <string name="prompt_confirm">Confirm Password</string>
    <string name="prompt_email">Nick Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="to_register">Do not have an account? click here to</string>
    <string name="register_link"><u>Register</u> </string>

    <string name="to_sign">Already have an account? click here to</string>
    <string name="sign_link"><u>Sign in</u> </string>

    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="BaseUrl">http://10.0.2.2:5271/api/</string>
    <string name="url">localhost:5271</string>

    <string name="add_image"> <u>add image</u></string>
    <string name="server">Server</string>
    <string name="add_contact">Add Contact</string>
    <string name="write_a_message">Write a message</string>

</resources>